--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;400&display=swap");
 
 :root {
   font-size: 16px;
-  --header-font: 'Playfair Display';
-  --text-font: 'Roboto';
+  --header-font: "Playfair Display";
+  --text-font: "Roboto";
+}
+
+html {
+  height: 100vh;
 }
 
 * {
@@ -16,7 +20,6 @@
 
 .main-text {
   font-family: var(--text-font), sans-serif;
-  color: rgb(105, 105, 105);
 }
 
 header {
@@ -39,7 +42,6 @@ header {
 }
 
 .full-name {
-  
   font-size: 3rem;
   color: white;
   background-color: rgba(14, 59, 14, 0.5);
@@ -67,17 +69,18 @@ h1 {
   gap: 16px;
 }
 
-.icons :is(img, svg){
+.icons :is(img, svg) {
   width: 36px;
 }
 
-.icons :is(img, svg):hover{
+.icons :is(img, svg):hover {
   opacity: 0.5;
   cursor: pointer;
 }
 
 main {
   margin: 12px;
+  padding: 48px 0;
 }
 
 .card {
@@ -85,7 +88,7 @@ main {
   margin: 12px 24px;
 }
 
-.card  .icons  :is(img, svg) {
+.card .icons :is(img, svg) {
   width: 24px;
 }
 
@@ -110,7 +113,53 @@ main {
   flex-direction: column;
 }
 
+.card-body .main-text {
+  color: rgb(105, 105, 105);
+}
+
 .image-placeholder {
   height: 200px;
   background-color: antiquewhite;
+}
+
+footer {
+  background-color: #0891b2;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.footer-body {
+  padding: 27px 16px;
+}
+
+footer p.main-text {
+  font-size: 1.25rem;
+}
+
+address,
+.contact-info {
+  font-size: 0.8rem;
+}
+
+.contact-info {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.contact-info p {
+  margin: 3px 0;
+}
+
+.contact-info :is(img, svg) {
+  width: 0;
+}
+
+footer h1 {
+  margin: 6px;
+}
+
+#mail-p {
+  padding: 3px;
 }
