--- a/style.css
+++ b/style.css
@@ -30,8 +30,18 @@ header {
   margin-bottom: 60px;
 }
 
+.gradient-div {
+  background: linear-gradient(150deg, rgb(8,145,178) 37%, rgba(231,232,232,1) 37%, rgba(255,255,255,1) 38%);
+  height: 100vh;
+  z-index: -1;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .header-picture {
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
   width: 100%;
 }
 
@@ -39,6 +49,7 @@ header {
   position: relative;
   display: flex;
   flex-direction: column;
+  margin: 18px;
 }
 
 .full-name {
