--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 
 html {
   height: 100vh;
+
 }
+
 
 * {
   box-sizing: border-box;
@@ -27,7 +29,7 @@ header {
   flex-direction: column;
   justify-items: center;
   margin: 12px;
-  margin-bottom: 60px;
+  margin-bottom: 48px;
 }
 
 .gradient-div {
@@ -90,14 +92,19 @@ h1 {
   cursor: pointer;
 }
 
-main {
-  margin: 12px;
-  padding: 48px 0;
+
+
+.card-wrapper {
+  display: grid;
+  grid-template-columns: repeat( auto-fit, minmax(258px, 1fr) );
+  justify-content: center;
+  gap: 24px 16px;
+  margin: 24px 36px;
 }
 
 .card {
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-  margin: 12px 24px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 4px;
 }
 
 .card .icons :is(img, svg) {
@@ -140,10 +147,14 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 12px;
+  align-items: center;
 }
 
 .footer-body {
   padding: 27px 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 footer p.main-text {
@@ -158,10 +169,7 @@ address,
 .contact-info {
   display: grid;
   grid-template-columns: auto 1fr;
-}
-
-.contact-info p {
-  margin: 3px 0;
+  align-items: center;
 }
 
 .contact-info :is(img, svg) {
@@ -172,6 +180,43 @@ footer h1 {
   margin: 6px;
 }
 
+.footer-image img {
+  object-fit: cover;
+  object-position: 30% 50%;
+  width: 100%;
+  height: 100%;
+}
+
 #mail-p {
   padding: 3px;
+}
+
+@media screen and (min-width: 500px) {
+  main > h1 {
+    text-align: start;
+    margin-left: 40px;
+  }
+  footer {
+    flex-direction: row;
+    height: 400px;
+    padding: 24px;
+  }
+  .footer-image {
+    
+    height: 100%;
+    width: 90%;
+  }
+  .contact-info {
+    gap: 4px;
+  }
+  .contact-info :is(svg, img) {
+    width: 16px;
+  }
+  .contact-info p {
+    padding: 3px;
+  }
+  .footer-body .icons {
+    justify-content: flex-start;
+    margin: 0;
+  }
 }
