--- a/style.css
+++ b/style.css
@@ -295,5 +295,45 @@ footer h1 {
   .card-wrapper {
     grid-template-columns: repeat(3, 1fr);
   }
+  .header-body {
+    height: 0;
+    padding-right: 12px;
+  }
+  header h1 {
+    text-align: start;
+    margin: 50px 0 12px 0;
+  }
+  .about-me {
+    width: 100%;
+    font-size: 1.1rem;
+    padding: 12px;
+    line-height: 1.25;
+  
+  }
+  .image-wrapper {
+    position: relative;
+    bottom: 0;
+    right: 0;
+    height: 120%;
+    bottom: 10%;
+    margin: 0;
+    margin-right: 12px;
+  }
+  .full-name {
+    left: 0;
+    bottom: 0;
+    transform: translateY(0);
+    background-color: rgba(14, 59, 14, 0.5);
+    width: 100%;
+  }
+  header .icons {
+    display: flex;
+    position: absolute;
+    right: 0;
+    bottom: 6px;
+  }
+  header .icons :is(img, svg) {
+    width: 18px;
+  }
 }
 
